--- a/Practica 5 - Jordi el millor/style.css
+++ b/Practica 5 - Jordi el millor/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
-
+/* En aquest document CSS donarem format a la taula de la pràctica 5 */
 table {
     border-collapse: collapse;
     margin: auto;
